2001-06-25  Marcus Brinkmann  <marcus@gnu.org>

	* i386/bogus/fpe.h (FPE): Define FPE to 0, as the floating point
	emulation is broken anyway and blows up plex86.

2001-06-17  Marcus Brinkmann  <marcus@gnu.org>

	* debian/rules: Update to current version.

2001-06-13  Roland McGrath  <roland@frob.com>

	* linux/dev/glue/block.c (device_get_status: DEV_GET_RECORDS):
	Always return 512 for DEV_GET_SIZE_RECORD_SIZE as DEV_GET_SIZE does.

2001-05-27  Marcus Brinkmann  <marcus@gnu.org>

	* debian/rules: Add --enable-ncr53c8xx to configure.

1999-10-06  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* linux/src/drivers/scsi/tmscsiw.c: Removed.
	* linux/src/drivers/scsi/tmscsiw.h: Likewise.
	* linux/src/drivers/scsi/dc390w.h: Likewise.
	* i386/linux/device-drivers.h.in (CONFIG_SCSI_DC390W): Deleted.
	* i386/linux/Drivers.in: Remove linux_DRIVER(dc390w, ...). Now
	dc390w, dc390u, and dc390f are aliases to ncr53c8xx.
	* i386/linux/configure: Regenerated.
	* linux/Files: Likewise.
	* i386/linux/Makefile.in (linux-scsi-files): Delete tmscsiw.c.
	* linux/dev/drivers/scsi/hosts.c: Do not include dc390w.h.
	Reported by Andreas Voegele <andreas.voegele@nikocity.de>.

2001-05-20  Roland McGrath  <roland@frob.com>

	* kern/sched_prim.c (state_panic): New function, panic with some
	info when a thread's state is bogus.
	(thread_wakeup_prim): Use that instead of uninformative panic.
	(thread_invoke): Likewise.
	(thread_dispatch): Likewise.

2001-05-12  Marcus Brinkmann  <marcus@gnu.org>

	* ipc/ipc_object.c (ipc_object_alloc): Remove initialization of
	*namep, which was without effect.

2001-04-29  Marcus Brinkmann  <marcus@gnu.org>

	* debian/changelog: New entries for past Debian uploads.
	* debian/rules: Disable eatdma driver (breaks AMD K7), do
	not enable com, lpr (com is redundant, lpr doesn't work),
	move enabling of kmsg in its own line.
	* debian/control: Add build dependency on mig and sharutils.

2001-04-29  Marcus Brinkmann  <marcus@gnu.org>
